fixed the modal window to left align text

--- a/www/css/campjoy.css
+++ b/www/css/campjoy.css
@@ -20,10 +20,6 @@
 	font-family: 'Rockwell';
 }
 
-div {
-	text-align: center;
-}
-
 .header {
 	background: url(../images/header.png);
 }
